# FantasyNomes

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
src/FantasyNomes/: __init__.py  polynome.py
tests/: add_polynomes.py
