[bdist_wheel]
universal=1

[metadata]
name = FantasyNomes
url = 
license = Apache 2.0
license_files = LICENSE
description = 
long_description = file: README.md
long_description_content_type = text/markdown
author = 
author_email = 
maintainer = 
maintainer_email =
classifiers =
    Development Status :: 1 - Beta
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: School :: Mathematics :: Polynome


[options]
python_requires = >=3.7
include_package_data = True
zip_safe = False
packages = find:
package_dir = src
install_requires =

[options.packages.find]
where = src


